update services section

--- a/index.html
+++ b/index.html
@@ -158,120 +158,16 @@
         <div class="container">
           <div class="row">
             <div class="section-header">
-              <h3 class="section-title">Our Services</h3>
+              <h3 class="section-title">Unsere Leistungen</h3>
               <span class="section-divider"></span>
             </div>
           </div>
 
-          <!-- <div class="row text-center">
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-                    <i class="bi bi-bricks"></i>
-                  </a>
-                  <h4>Fliesen Platter</h4>
-                  <p>
-                    will have to make sure the prototype looks finished by
-                    inserting text or photo.make sure the prototype looks
-                    finished by.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-                    <i class="bi bi-card-checklist"></i>
-                  </a>
-                  <h4>Sanitär</h4>
-                  <p>
-                    will have to make sure the prototype looks finished by
-                    inserting text or photo.make sure the prototype looks
-                    finished by.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-                    <i class="bi bi-bar-chart"></i>
-                  </a>
-                  <h4>Maler</h4>
-                  <p>
-                    will have to make sure the prototype looks finished by
-                    inserting text or photo.make sure the prototype looks
-                    finished by.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-                    <i class="bi bi-binoculars"></i>
-                  </a>
-                  <h4>Bodenleger</h4>
-                  <p>
-                    will have to make sure the prototype looks finished by
-                    inserting text or photo.make sure the prototype looks
-                    finished by.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-                    <i class="bi bi-brightness-high"></i>
-                  </a>
-                  <h4>Fliesenleger</h4>
-                  <p>
-                    will have to make sure the prototype looks finished by
-                    inserting text or photo.make sure the prototype looks
-                    finished by.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 col-xs-12">
-            <div class="about-move">
-              <div class="services-details">
-                <div class="single-services">
-                  <a class="services-icon" href="#">
-                    <i class="bi bi-calendar4-week"></i>
-                  </a>
-                  <h4>Trockenbauer</h4>
-                  <p>
-                    will have to make sure the prototype looks finished by
-                    inserting text or photo.make sure the prototype looks
-                    finished by.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
           <div class="row">
             <div class="col-md-6">
               <div class="icon-box">
-                <i class="bi bi-briefcase"></i>
-                <h4><a href="#">Lorem Ipsum</a></h4>
+                <i class="bi bi-bricks"></i>
+                <h4><a href="#">Fliesen Platter</a></h4>
                 <p>
                   Voluptatum deleniti atque corrupti quos dolores et quas
                   molestias excepturi sint occaecati cupiditate non provident
@@ -280,8 +176,8 @@
             </div>
             <div class="col-md-6 mt-4 mt-lg-0">
               <div class="icon-box">
-                <i class="bi bi-card-checklist"></i>
-                <h4><a href="#">Dolor Sitema</a></h4>
+                <i class="bi bi-bezier2"></i>
+                <h4><a href="#">Sanitär</a></h4>
                 <p>
                   Minim veniam, quis nostrud exercitation ullamco laboris nisi
                   ut aliquip ex ea commodo consequat tarad limino ata
@@ -290,8 +186,8 @@
             </div>
             <div class="col-md-6 mt-4">
               <div class="icon-box">
-                <i class="bi bi-bar-chart"></i>
-                <h4><a href="#">Sed ut perspiciatis</a></h4>
+                <i class="bi bi-bucket-fill"></i>
+                <h4><a href="#">Maler</a></h4>
                 <p>
                   Duis aute irure dolor in reprehenderit in voluptate velit esse
                   cillum dolore eu fugiat nulla pariatur
@@ -300,8 +196,8 @@
             </div>
             <div class="col-md-6 mt-4">
               <div class="icon-box">
-                <i class="bi bi-binoculars"></i>
-                <h4><a href="#">Nemo Enim</a></h4>
+                <i class="bi bi-columns-gap"></i>
+                <h4><a href="#">Bodenleger</a></h4>
                 <p>
                   Excepteur sint occaecat cupidatat non proident, sunt in culpa
                   qui officia deserunt mollit anim id est laborum
@@ -310,8 +206,8 @@
             </div>
             <div class="col-md-6 mt-4">
               <div class="icon-box">
-                <i class="bi bi-brightness-high"></i>
-                <h4><a href="#">Magni Dolore</a></h4>
+                <i class="bi bi-front"></i>
+                <h4><a href="#">Fliesenleger</a></h4>
                 <p>
                   At vero eos et accusamus et iusto odio dignissimos ducimus qui
                   blanditiis praesentium voluptatum deleniti atque
@@ -320,8 +216,130 @@
             </div>
             <div class="col-md-6 mt-4">
               <div class="icon-box">
+                <i class="bi bi-grid-3x3-gap"></i>
+                <h4><a href="#">Trockenbauer</a></h4>
+                <p>
+                  Et harum quidem rerum facilis est et expedita distinctio. Nam
+                  libero tempore, cum soluta nobis est eligendi
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mt-4">
+              <div class="icon-box">
+                <i class="bi bi-life-preserver"></i>
+                <h4>
+                  <a href="#">
+                    beinhaltet die Erneuerung der sanitären Anlagen
+                  </a>
+                </h4>
+                <p>
+                  Et harum quidem rerum facilis est et expedita distinctio. Nam
+                  libero tempore, cum soluta nobis est eligendi
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mt-4">
+              <div class="icon-box">
+                <i class="bi bi-shield-check"></i>
+                <h4>
+                  <a href="#">Baderneuerung Die Komplettsanierung</a>
+                </h4>
+                <p>
+                  Et harum quidem rerum facilis est et expedita distinctio. Nam
+                  libero tempore, cum soluta nobis est eligendi
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mt-4">
+              <div class="icon-box">
+                <i class="bi bi-house-fill"></i>
+                <h4>
+                  <a href="#"> Wohnungssanierung </a>
+                </h4>
+                <p>
+                  Et harum quidem rerum facilis est et expedita distinctio. Nam
+                  libero tempore, cum soluta nobis est eligendi
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mt-4">
+              <div class="icon-box">
+                <i class="bi bi-house-door"></i>
+                <h4>
+                  <a href="#"> Komplettrenovierung und Haussanierung </a>
+                </h4>
+                <p>
+                  Et harum quidem rerum facilis est et expedita distinctio. Nam
+                  libero tempore, cum soluta nobis est eligendi
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mt-4">
+              <div class="icon-box">
+                <i class="bi bi-arrow-clockwise"></i>
+                <h4>
+                  <a href="#">Grundrissänderungen</a>
+                </h4>
+                <p>
+                  Et harum quidem rerum facilis est et expedita distinctio. Nam
+                  libero tempore, cum soluta nobis est eligendi
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mt-4">
+              <div class="icon-box">
+                <i class="bi bi-body-text"></i>
+                <h4>
+                  <a href="#">Bodenbelagsarbeiten</a>
+                </h4>
+                <p>
+                  Et harum quidem rerum facilis est et expedita distinctio. Nam
+                  libero tempore, cum soluta nobis est eligendi
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mt-4">
+              <div class="icon-box">
+                <i class="bi bi-diamond-half"></i>
+                <h4>
+                  <a href="#">Spachtelarbeiten</a>
+                </h4>
+                <p>
+                  Et harum quidem rerum facilis est et expedita distinctio. Nam
+                  libero tempore, cum soluta nobis est eligendi
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mt-4">
+              <div class="icon-box">
+                <i class="bi bi-kanban"></i>
+                <h4>
+                  <a href="#">Tapezierarbeiten</a>
+                </h4>
+                <p>
+                  Et harum quidem rerum facilis est et expedita distinctio. Nam
+                  libero tempore, cum soluta nobis est eligendi
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mt-4">
+              <div class="icon-box">
+                <i class="bi bi-lightbulb-fill"></i>
+                <h4>
+                  <a href="#">Fliesenverlegearbeiten</a>
+                </h4>
+                <p>
+                  Et harum quidem rerum facilis est et expedita distinctio. Nam
+                  libero tempore, cum soluta nobis est eligendi
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6 mt-4">
+              <div class="icon-box">
                 <i class="bi bi-calendar4-week"></i>
-                <h4><a href="#">Eiusmod Tempor</a></h4>
+                <h4>
+                  <a href="#">Trockenbauarbeiten</a>
+                </h4>
                 <p>
                   Et harum quidem rerum facilis est et expedita distinctio. Nam
                   libero tempore, cum soluta nobis est eligendi
