update count section

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p>Happy Clients</p>
+                <p>Glückliche Kunden</p>
               </div>
             </div>
 
@@ -377,7 +377,7 @@
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p>Projects</p>
+                <p>Projekte</p>
               </div>
             </div>
 
@@ -390,7 +390,7 @@
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p>Hours Of Support</p>
+                <p>Stunden des Supports</p>
               </div>
             </div>
 
@@ -403,7 +403,7 @@
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p>Hard Workers</p>
+                <p>Harte Arbeiter</p>
               </div>
             </div>
           </div>
