update portfolio section

--- a/index.html
+++ b/index.html
@@ -419,10 +419,10 @@
               <div class="section-title">
                 <h2>Portfolio</h2>
                 <span class="section-divider"></span>
-                <p class="section-description">
+                <!-- <p class="section-description">
                   Sit sint consectetur velit quisquam cupiditate impedit
                   suscipit
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
@@ -430,27 +430,27 @@
           <div class="row">
             <div class="col-lg-12">
               <ul id="portfolio-flters">
-                <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-app">App</li>
-                <li data-filter=".filter-card">Card</li>
-                <li data-filter=".filter-web">Web</li>
+                <li data-filter="*" class="filter-active">Alles</li>
+                <li data-filter=".filter-wall">Wände</li>
+                <li data-filter=".filter-floor">Etagen</li>
+                <li data-filter=".filter-bathroom">Badezimmer</li>
               </ul>
             </div>
           </div>
 
           <div class="row portfolio-container">
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-floor wow fadeInUp"
             >
               <div class="portfolio-wrap">
                 <figure>
                   <img
-                    src="assets/img/portfolio/portfolio-1.jpg"
+                    src="assets/img/portfolio/floor-1.jpg"
                     class="img-fluid"
-                    alt=""
+                    alt="floor"
                   />
                   <a
-                    href="assets/img/portfolio/portfolio-1.jpg"
+                    href="assets/img/portfolio/floor-1.jpg"
                     data-gallery="portfolioGallery"
                     class="link-preview portfolio-lightbox"
                     title="Preview"
@@ -461,18 +461,18 @@
             </div>
 
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-floor wow fadeInUp"
               data-wow-delay="0.1s"
             >
               <div class="portfolio-wrap">
                 <figure>
                   <img
-                    src="assets/img/portfolio/portfolio-2.jpg"
+                    src="assets/img/portfolio/floor-2.jpg"
                     class="img-fluid"
-                    alt=""
+                    alt="floor"
                   />
                   <a
-                    href="assets/img/portfolio/portfolio-2.jpg"
+                    href="assets/img/portfolio/floor-2.jpg"
                     class="link-preview portfolio-lightbox"
                     data-gallery="portfolioGallery"
                     title="Preview"
@@ -483,18 +483,18 @@
             </div>
 
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-floor wow fadeInUp"
               data-wow-delay="0.2s"
             >
               <div class="portfolio-wrap">
                 <figure>
                   <img
-                    src="assets/img/portfolio/portfolio-3.jpg"
+                    src="assets/img/portfolio/floor-3.jpg"
                     class="img-fluid"
-                    alt=""
+                    alt="floor"
                   />
                   <a
-                    href="assets/img/portfolio/portfolio-3.jpg"
+                    href="assets/img/portfolio/floor-3.jpg"
                     class="link-preview portfolio-lightbox"
                     data-gallery="portfolioGallery"
                     title="Preview"
@@ -505,17 +505,17 @@
             </div>
 
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-wall wow fadeInUp"
             >
               <div class="portfolio-wrap">
                 <figure>
                   <img
-                    src="assets/img/portfolio/portfolio-4.jpg"
-                    class="img-fluid"
-                    alt=""
+                    src="assets/img/portfolio/wall-1.jpg"
+                    class="img-fluid h-100"
+                    alt="wall"
                   />
                   <a
-                    href="assets/img/portfolio/portfolio-4.jpg"
+                    href="assets/img/portfolio/wall-1.jpg"
                     class="link-preview portfolio-lightbox"
                     data-gallery="portfolioGallery"
                     title="Preview"
@@ -526,18 +526,18 @@
             </div>
 
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-wall wow fadeInUp"
               data-wow-delay="0.1s"
             >
               <div class="portfolio-wrap">
                 <figure>
                   <img
-                    src="assets/img/portfolio/portfolio-5.jpg"
-                    class="img-fluid"
-                    alt=""
+                    src="assets/img/portfolio/wall-2.jpg"
+                    class="img-fluid h-100"
+                    alt="wall"
                   />
                   <a
-                    href="assets/img/portfolio/portfolio-5.jpg"
+                    href="assets/img/portfolio/wall-2.jpg"
                     class="link-preview portfolio-lightbox"
                     data-gallery="portfolioGallery"
                     title="Preview"
@@ -548,18 +548,18 @@
             </div>
 
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-app wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-wall wow fadeInUp"
               data-wow-delay="0.2s"
             >
               <div class="portfolio-wrap">
                 <figure>
                   <img
-                    src="assets/img/portfolio/portfolio-6.jpg"
-                    class="img-fluid"
-                    alt=""
+                    src="assets/img/portfolio/wall-3.jpg"
+                    class="img-fluid h-100"
+                    alt="wall"
                   />
                   <a
-                    href="assets/img/portfolio/portfolio-6.jpg"
+                    href="assets/img/portfolio/wall-3.jpg"
                     class="link-preview portfolio-lightbox"
                     data-gallery="portfolioGallery"
                     title="Preview"
@@ -570,17 +570,17 @@
             </div>
 
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-bathroom wow fadeInUp"
             >
               <div class="portfolio-wrap">
                 <figure>
                   <img
-                    src="assets/img/portfolio/portfolio-7.jpg"
+                    src="assets/img/portfolio/bathroom-1.jpg"
                     class="img-fluid"
-                    alt=""
+                    alt="bathroom"
                   />
                   <a
-                    href="assets/img/portfolio/portfolio-7.jpg"
+                    href="assets/img/portfolio/bathroom-1.jpg"
                     class="link-preview portfolio-lightbox"
                     data-gallery="portfolioGallery"
                     title="Preview"
@@ -592,18 +592,18 @@
             </div>
 
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-card wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-bathroom wow fadeInUp"
               data-wow-delay="0.1s"
             >
               <div class="portfolio-wrap">
                 <figure>
                   <img
-                    src="assets/img/portfolio/portfolio-8.jpg"
+                    src="assets/img/portfolio/bathroom-2.jpg"
                     class="img-fluid"
-                    alt=""
+                    alt="bathroom"
                   />
                   <a
-                    href="assets/img/portfolio/portfolio-8.jpg"
+                    href="assets/img/portfolio/bathroom-2.jpg"
                     class="link-preview portfolio-lightbox"
                     data-gallery="portfolioGallery"
                     title="Preview"
@@ -615,18 +615,18 @@
             </div>
 
             <div
-              class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp"
+              class="col-lg-4 col-md-6 portfolio-item filter-bathroom wow fadeInUp"
               data-wow-delay="0.2s"
             >
               <div class="portfolio-wrap">
                 <figure>
                   <img
-                    src="assets/img/portfolio/portfolio-9.jpg"
+                    src="assets/img/portfolio/bathroom-3.jpg"
                     class="img-fluid"
-                    alt=""
+                    alt="bathroom"
                   />
                   <a
-                    href="assets/img/portfolio/portfolio-9.jpg"
+                    href="assets/img/portfolio/bathroom-3.jpg"
                     class="link-preview portfolio-lightbox"
                     data-gallery="portfolioGallery"
                     title="Preview"
