--- a/index.html
+++ b/index.html
@@ -57,16 +57,20 @@
 
         <nav id="navbar" class="navbar order-last order-lg-0">
           <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#services">Services</a></li>
+            <li><a class="nav-link scrollto active" href="#hero">Heim</a></li>
+            <li><a class="nav-link scrollto" href="#about">Über</a></li>
+            <li>
+              <a class="nav-link scrollto" href="#services">Dienstleistungen</a>
+            </li>
             <li>
               <a class="nav-link scrollto" href="#portfolio">Portfolio</a>
             </li>
             <li>
-              <a class="nav-link scrollto" href="#testimonials">Testimonials</a>
+              <a class="nav-link scrollto" href="#testimonials">Referenzen</a>
             </li>
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+            <li>
+              <a class="nav-link scrollto" href="#contact">Kontaktiere uns</a>
+            </li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
