--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.ico" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="assets/img/logo3.ico" rel="icon" />
+    <link href="assets/img/logo3.ico" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -47,11 +47,11 @@
     <header id="header" class="fixed-top d-flex align-items-center">
       <div class="container d-flex align-items-center">
         <div class="logo me-auto">
-          <a href="index.html">
-            <h1>
-              <a href="index.html"> Alsallakh Sanierung </a>
+          <a href="index.html" class="d-flex align-items-center">
+            <img src="assets/img/logo4.svg" alt="" class="img-fluid" />
+            <h1 class="d-inline-block mx-2 my-auto text-center">
+              Alsallakh Sanierung
             </h1>
-            <!-- <img src="assets/img/favicon.ico" alt="" class="img-fluid" /> -->
           </a>
         </div>
 
@@ -171,51 +171,45 @@
             <div class="col-md-6">
               <div class="icon-box">
                 <i class="bi bi-bricks"></i>
-                <h4><a href="#">Fliesen Platter</a></h4>
+                <h4>Fliesen Platter</h4>
                 <p>
-                  Voluptatum deleniti atque corrupti quos dolores et quas
-                  molestias excepturi sint occaecati cupiditate non provident
+                  Revitalize the heart of your home with tile that can achieve
+                  any design style you've been dreaming of.
                 </p>
               </div>
             </div>
             <div class="col-md-6 mt-4 mt-lg-0">
               <div class="icon-box">
                 <i class="bi bi-bezier2"></i>
-                <h4><a href="#">Sanitär</a></h4>
+                <h4>Sanitär</h4>
                 <p>
-                  Minim veniam, quis nostrud exercitation ullamco laboris nisi
-                  ut aliquip ex ea commodo consequat tarad limino ata
+                  Do all sanitary work for the home with the latest methods and
+                  innovations
                 </p>
               </div>
             </div>
             <div class="col-md-6 mt-4">
               <div class="icon-box">
                 <i class="bi bi-bucket-fill"></i>
-                <h4><a href="#">Maler</a></h4>
+                <h4>Maler</h4>
                 <p>
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse
-                  cillum dolore eu fugiat nulla pariatur
+                  Painting the walls with the most beautiful graphics and shapes
+                  professionally
                 </p>
               </div>
             </div>
             <div class="col-md-6 mt-4">
               <div class="icon-box">
                 <i class="bi bi-columns-gap"></i>
-                <h4><a href="#">Bodenleger</a></h4>
-                <p>
-                  Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                  qui officia deserunt mollit anim id est laborum
-                </p>
+                <h4>Bodenleger</h4>
+                <p>Floor tiling of the house with all types of tiles</p>
               </div>
             </div>
             <div class="col-md-6 mt-4">
               <div class="icon-box">
                 <i class="bi bi-front"></i>
-                <h4><a href="#">Fliesenleger</a></h4>
-                <p>
-                  At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                  blanditiis praesentium voluptatum deleniti atque
-                </p>
+                <h4>Fliesenleger</h4>
+                <p>Covering the house with all kinds of tiles</p>
               </div>
             </div>
             <div class="col-md-6 mt-4">
@@ -867,7 +861,10 @@
 
         <div class="map">
           <iframe
-            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2602.5404384783983!2d6.8865967999999995!3d49.2851047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4795afd3a884ee65%3A0xdd100ce6ee49856!2sWeiherbachstra%C3%9Fe%2018%2C%2066346%20P%C3%BCttlingen%2C%20Germany!5e0!3m2!1sen!2sae!4v1654295083969!5m2!1sen!2sae"
+            style="border: 0"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
             frameborder="0"
             allowfullscreen
           ></iframe>
@@ -880,19 +877,19 @@
                   <div class="col-lg-4 info">
                     <i class="bi bi-geo-alt"></i>
                     <h4>Standort:</h4>
-                    <p>A108 Adam Street<br />New York, NY 535022</p>
+                    <p>Weiherbachstraße 18</p>
                   </div>
 
                   <div class="col-lg-4 info mt-4 mt-lg-0">
                     <i class="bi bi-envelope"></i>
                     <h4>Email:</h4>
-                    <p>info@example.com<br />contact@example.com</p>
+                    <p>info@alsallakh-sanierung.de</p>
                   </div>
 
                   <div class="col-lg-4 info mt-4 mt-lg-0">
                     <i class="bi bi-phone"></i>
                     <h4>Forderung:</h4>
-                    <p>+1 5589 55488 51<br />+1 5589 22475 14</p>
+                    <p>+49172 7724820</p>
                   </div>
                 </div>
               </div>
