--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 mt-4 mt-lg-0">
+            <div class="col-md-6 mt-4 mt-lg-0 d-none">
               <div class="icon-box">
                 <i class="bi bi-bezier2"></i>
                 <h4>Sanitär</h4>
@@ -205,7 +205,7 @@
                 <p>Floor tiling of the house with all types of tiles</p>
               </div>
             </div>
-            <div class="col-md-6 mt-4">
+            <div class="col-md-6 mt-4 d-none">
               <div class="icon-box">
                 <i class="bi bi-front"></i>
                 <h4>Fliesenleger</h4>
@@ -217,12 +217,11 @@
                 <i class="bi bi-grid-3x3-gap"></i>
                 <h4><a href="#">Trockenbauer</a></h4>
                 <p>
-                  Et harum quidem rerum facilis est et expedita distinctio. Nam
-                  libero tempore, cum soluta nobis est eligendi
+                  Latest designs using gypsum wall.
                 </p>
               </div>
             </div>
-            <div class="col-md-6 mt-4">
+            <div class="col-md-6 mt-4 d-none">
               <div class="icon-box">
                 <i class="bi bi-life-preserver"></i>
                 <h4>
@@ -272,7 +271,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 mt-4">
+            <div class="col-md-6 mt-4 d-none">
               <div class="icon-box">
                 <i class="bi bi-arrow-clockwise"></i>
                 <h4>
@@ -332,7 +331,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 mt-4">
+            <div class="col-md-6 mt-4 d-none">
               <div class="icon-box">
                 <i class="bi bi-calendar4-week"></i>
                 <h4>
